review page layed out and content set

--- a/nateeubanksNG/src/app/reviews/reviews.component.html
+++ b/nateeubanksNG/src/app/reviews/reviews.component.html
@@ -1,15 +1,15 @@
-<div class="" fxLayout="row" fxLayout.xs="column" fxFlexFill>
-    <div fxFlex="50">
+<div class="" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxFlexFill>
+    <div fxFlex="33">
         <mat-card class="example-card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
+                <div mat-card-avatar class="sean-header-image"></div>
                 <a mat-card-title href="https://twitter.com/seanmorahan?lang=en" target="_blank">Sean Morahan</a>
                 <mat-card-subtitle>A Laugh And A Half, Sydney</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="/assets/images/seanMorahan.jpg" alt="Photo of a Shiba Inu" />
+            <img mat-card-image src="/assets/images/seanMorahan.jpg" alt="Photo of a Sean" />
             <mat-card-content>
-                <h2>Nate delivered</h2>
-                <p>
+                <h2 class="featurette-heading">Nate delivered</h2>
+                <p class="lead">
                     In early 2017 Nate Eubanks contacted me about performing in my curated rooms in Sydney. I viewed his video and advised him his material was too dark for the audiences we
                     deliberately attract to our rooms. Nate assured me had a sufficient range of material and enough experience to tailor a set to each room's audience. I was impressed with his
                     experience and polite and professional approach, so decided to test him out with a short spot. Nate delivered a really tight, laugh-filled set and tailored his material to the
@@ -28,115 +28,109 @@
         </mat-card>
     </div>
 
-    <div fxFlex="50">
+    <div fxFlex="33">
         <mat-card class="example-card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Rob K Schulte</a>
+                <div mat-card-avatar class="rob-header-image"></div>
+                <a mat-card-title href="https://twitter.com/robkschulte" target="_blank">Rob K Schulte</a>
                 <mat-card-subtitle>Producer, Comedian</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <h2>Truly a funny dude</h2>
-                <p>
+                <h2 class="featurette-heading">Truly a funny dude</h2>
+                <p class="lead">
                     I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy to perform on the same stage with him, have him as a guest on the podcast, or just sit
                     in the audience. Truly a funny dude.
                 </p>
             </mat-card-content>
-            <img mat-card-image src="/assets/images/robs.jpg" alt="Photo of a Shiba Inu" />
-            <mat-card-actions>
-                <button mat-button>Doin' It with Mike Sacks... and Rob</button> <button mat-button>Can't Sleep</button> <button mat-button>Mr Corpo</button>
-                <button mat-button href="https://twitter.com/robkschulte">@robkschulte</button>
-            </mat-card-actions>
+            <img mat-card-image src="/assets/images/robs.jpg" alt="Photo of a Rob" />
+            <blockquote class="blockquote">
+                <p>
+                    <small>Executive Producer <cite>Doin' It with Mike Sacks... and Rob</cite></small> <small>Audio Producer <cite>Can't Sleep</cite></small>
+                    <small>Producer <cite>Mr Corpo</cite> podcast</small>
+                </p>
+            </blockquote>
+            <mat-card-actions> <button mat-button href="https://twitter.com/robkschulte">@robkschulte</button> </mat-card-actions>
         </mat-card>
     </div>
-<!-- </div> -->
 
-<!-- <div class="" fxLayout="row" fxLayout.xs="column" fxFlexFill> -->
-    <div fxFlex="50">
+    <div fxFlex="33">
         <mat-card class="example-card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
+                <div mat-card-avatar class="ali-header-image"></div>
+                <a mat-card-title href="https://twitter.com/AliFingerz" target="_blank">Ali Fingerz</a>
+                <mat-card-subtitle>Producer, Comedian</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="/assets/images/ali-fingerz.jpg" alt="Photo of a Ali" />
+            <mat-card-content>
+                <h2 class="featurette-heading">Loved his style</h2>
+                <p class="lead">
+                    It was an absolute pleasure to meet and share the stage with Nate in Doha, Qatar. I had heard of him from a comedian friend of mine in Kuwait and watching him work was an
+                    eye-opener. His versatile material hits you with the subtlety of a bat. I was happy to book him on my show in Bahrain shortly after. The crowd loved his style and the contrast
+                    between him and other comedians in the GCC. I'm more than confident that we will share the stage and laugh together again and I hope that happens sooner rather than later...in
+                    whatever part of the world that may be.
+                </p>
+            </mat-card-content>
+            <blockquote class="blockquote">
+                <small>Host of <cite>Bahrain For All, Run DMC and Bumblefoot of Guns n Roses</cite></small> <small>Presenter for <cite>TED Talk</cite></small>
+                <small>Stand up comedy (Kuwait, Qatar, Oman, and Saudi Arabia), instagram Mitsfitz.Comedy (tens of thousands of views), writer, film actor, cartoon voiceover actor</small>
+            </blockquote>
+            <mat-card-actions> <a mat-button target="_blank" href="https://twitter.com/AliFingerz">@AliFingerz</a> </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
+
+<hr class="featurette-divider" />
+
+<div class="" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxFlexFill>
+    <div fxFlex="33">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="matt-header-image"></div>
+                <a mat-card-title href="https://twitter.com/mattkecksucks" target="_blank">Matt Keck</a>
+                <mat-card-subtitle>Comedian, YouTuber</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="/assets/images/matt-keck.jpg" alt="Photo of a Matt" />
+            <mat-card-content>
+                <h2 class="featurette-heading">He’s going to kill it</h2>
+                <p class="lead">
+                    Nate is one of the most versatile performers we’ve ever had on our show. He’s done standup, our roast battle, and helped by writing and performing sketches. He’s the type of comic
+                    I love to book, because I know he’s is going to perform well no matter what crazy thing I ask him to do. I can put him on a show and not have to worry about that part, because I
+                    know he’s going to kill it.
+                </p>
+                <blockquote class="blockquote">
+                    <small>Appearances on <cite>Tosh.0</cite>, <cite>Web Soup</cite> and <cite>Ridiculousness</cite> for his YouTube videos, which have amassed over 30 million views.</small>
+                </blockquote>
+            </mat-card-content>
+            <mat-card-actions> <a mat-button href="https://twitter.com/mattkecksucks" target="_blank">@mattkecksucks</a> </mat-card-actions>
+        </mat-card>
+    </div>
+
+    <div fxFlex="33">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="tristin-header-image"></div>
                 <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Tristan Newell</a>
                 <mat-card-subtitle>Debate League Stand-Up National Champion</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" />
+            <img mat-card-image src="/assets/images/tristen.jpg" alt="Photo of a Tristan" />
             <mat-card-content>
-                <h2>Nate Freakin' Eubanks</h2>
-                <p>
+                <h2 class="featurette-heading">Nate Freakin' Eubanks</h2>
+                <p class="lead">
                     Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about
                     one of Nate's jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with full intention to help him, I totally forgot. Just straight up
                     forgot. THEN I started thinking about cats, and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks.
                 </p>
+                <blockquote class="blockquote">
+                    <p>
+                        <small>Debate League Stand-Up National Champion</small> <small>Kansas City Improv</small> <small>Producer <cite>Big Hot Bits</cite></small>
+                        <small>Featured for <cite>Kyle Kinane</cite></small>
+                        <small>Appeared in nationally touring shows <cite>7 Minutes in Purgatory</cite> and <cite>Underwear Comedy Party</cite></small>
+                    </p>
+                </blockquote>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-button>Doin' It with Mike Sacks... and Rob</button> <button mat-button>Can't Sleep</button> <button mat-button>Mr Corpo</button>
                 <a mat-button href="https://twitter.com/Pinklepus" target="_blank">@Pinklepus</a>
             </mat-card-actions>
         </mat-card>
     </div>
-</div>
-
-<div class="row featurette">
-    <div class="col-md-7 col-md-push-5">
-        <h2 class="featurette-heading">Nate Freakin' Eubanks</h2>
-        <h4>
-            <span class="text-muted"><a href="https://twitter.com/Pinklepus" target="_blank">@Pinklepus</a></span>
-        </h4>
-        <blockquote class="blockquote">
-            <p class="lead">
-                Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one
-                of Nate's jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with full intention to help him, I totally forgot. Just straight up forgot.
-                THEN I started thinking about cats, and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks.
-            </p>
-            <p>Tristan Newell</p>
-            <small>Debate League Stand-Up National Champion</small> <small>Producer <cite>Big Hot Bits</cite></small
-            ><small>Featured for <cite>Kyle Kinane</cite></small> <small>Appeared in nationally touring shows <cite>7 Minutes in Purgatory</cite> and <cite>Underwear Comedy Party</cite></small
-            ><small>Kansas City Improv</small>
-        </blockquote>
-    </div>
-    <div class="col-md-5 col-md-pull-7"><img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/tristen.jpg" alt="Image of Tristan Newell" /></div>
-</div>
-
-<hr class="featurette-divider" />
-
-<div class="row featurette">
-    <div class="col-md-7">
-        <h2 class="featurette-heading">He’s going to kill it</h2>
-        <h4>
-            <span class="text-muted"> <a href="https://twitter.com/mattkecksucks" target="_blank">@mattkecksucks</a> </span>
-        </h4>
-        <blockquote class="blockquote">
-            <p class="lead">
-                Nate is one of the most versatile performers we’ve ever had on our show. He’s done standup, our roast battle, and helped by writing and performing sketches. He’s the type of comic I
-                love to book, because I know he’s is going to perform well no matter what crazy thing I ask him to do. I can put him on a show and not have to worry about that part, because I know
-                he’s going to kill it.
-            </p>
-            <p>Matt Keck</p>
-            <small>Appearances on <cite>Tosh.0</cite>, <cite>Web Soup</cite> and <cite>Ridiculousness</cite> for his YouTube videos, which have amassed over 30 million views.</small>
-        </blockquote>
-    </div>
-    <div class="col-md-5"><img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/matt-keck.jpg" alt="Image of Matt Keck" /></div>
-</div>
-
-<hr class="featurette-divider" />
-
-<div class="row featurette">
-    <div class="col-md-7 col-md-push-5">
-        <h2 class="featurette-heading">Loved his style</h2>
-        <h4>
-            <span class="text-muted"><a href="https://twitter.com/AliFingerz" target="_blank">@AliFingerz</a></span>
-        </h4>
-        <blockquote class="blockquote">
-            <p class="lead">
-                It was an absolute pleasure to meet and share the stage with Nate in Doha, Qatar. I had heard of him from a comedian friend of mine in Kuwait and watching him work was an eye-opener.
-                His versatile material hits you with the subtlety of a bat. I was happy to book him on my show in Bahrain shortly after. The crowd loved his style and the contrast between him and
-                other comedians in the GCC. I'm more than confident that we will share the stage and laugh together again and I hope that happens sooner rather than later...in whatever part of the
-                world that may be.
-            </p>
-            <p>Ali Fingerz</p>
-            <small>Host of <cite>Bahrain For All, Run DMC and Bumblefoot of Guns n Roses</cite></small> <small>Presenter for <cite>TED Talk</cite></small>
-            <small>Stand up comedy (Kuwait, Qatar, Oman, and Saudi Arabia), instagram Mitsfitz.Comedy (tens of thousands of views), writer, film actor, cartoon voiceover actor</small>
-        </blockquote>
-    </div>
-    <div class="col-md-5 col-md-pull-7"><img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/ali-fingerz.jpg" alt="Image of Ali Fingerz" /></div>
 </div>
