--- a/nateeubanksNG/src/app/app.component.scss
+++ b/nateeubanksNG/src/app/app.component.scss
@@ -16,9 +16,10 @@ body, input[type='text'], button {
     font-family: Cambria, Georgia;
 }
 
-// .site-content {
-//     flex: 1;
-// }
+.site-content {
+    flex: 1;
+    flex-direction: column;
+}
 
 // :host {
 //     display: flex;
