performance.service crud WIP

--- a/nateeubanksNG/src/app/upcoming-shows/upcoming-shows.component.html
+++ b/nateeubanksNG/src/app/upcoming-shows/upcoming-shows.component.html
@@ -1,3 +1,6 @@
-<p>
-  upcoming-shows works!
-</p>
+<div fxlayout="row" fxLayoutAlign="center" fxFlexFill>
+    <div fxFlex="100">
+        <h3>{{ perfs[0].clubName }}, {{ perfs[0].location }}</h3>
+        <h3>{{ perfs[1].clubName }}, {{ perfs[1].location }}</h3>
+    </div>
+</div>
