routing adjusted to use '#', so refreshing the page doesn't 404; updated relative paths so everything loads when building for deployment on a tomcat server; prod build copied to WebContent folder

--- a/nateeubanksNG/src/app/home/home.component.html
+++ b/nateeubanksNG/src/app/home/home.component.html
@@ -81,7 +81,7 @@
                     Sydney, and bars in Tbilisi Nate brings the laughs to every audience.
                 </p>
             </div>
-            <div class="col-md-5 col-md-pull-7"><img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="/assets/images/head2.jpg" alt="Image of Nate" /></div>
+            <div class="col-md-5 col-md-pull-7"><img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="./assets/images/head2.jpg" alt="Image of Nate" /></div>
         </div>
 
         <hr class="featurette-divider" />
