--- a/nateeubanksNG/src/app/reviews/reviews.component.html
+++ b/nateeubanksNG/src/app/reviews/reviews.component.html
@@ -6,7 +6,7 @@
                 <a mat-card-title href="https://twitter.com/seanmorahan?lang=en" target="_blank">Sean Morahan</a>
                 <mat-card-subtitle>A Laugh And A Half, Sydney</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="/assets/images/seanMorahan.jpg" alt="Photo of a Sean" />
+            <img mat-card-image src="./assets/images/seanMorahan.jpg" alt="Photo of a Sean" />
             <mat-card-content>
                 <h2 class="featurette-heading">Nate delivered</h2>
                 <p class="lead">
@@ -42,7 +42,7 @@
                     in the audience. Truly a funny dude.
                 </p>
             </mat-card-content>
-            <img mat-card-image src="/assets/images/robs.jpg" alt="Photo of a Rob" />
+            <img mat-card-image src="./assets/images/robs.jpg" alt="Photo of a Rob" />
             <blockquote class="blockquote">
                 <p>
                     <small>Executive Producer <cite>Doin' It with Mike Sacks... and Rob</cite></small> <small>Audio Producer <cite>Can't Sleep</cite></small>
@@ -60,7 +60,7 @@
                 <a mat-card-title href="https://twitter.com/AliFingerz" target="_blank">Ali Fingerz</a>
                 <mat-card-subtitle>Producer, Comedian</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="/assets/images/ali-fingerz.jpg" alt="Photo of a Ali" />
+            <img mat-card-image src="./assets/images/ali-fingerz.jpg" alt="Photo of a Ali" />
             <mat-card-content>
                 <h2 class="featurette-heading">Loved his style</h2>
                 <p class="lead">
@@ -89,7 +89,7 @@
                 <a mat-card-title href="https://twitter.com/mattkecksucks" target="_blank">Matt Keck</a>
                 <mat-card-subtitle>Comedian, YouTuber</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="/assets/images/matt-keck.jpg" alt="Photo of a Matt" />
+            <img mat-card-image src="./assets/images/matt-keck.jpg" alt="Photo of a Matt" />
             <mat-card-content>
                 <h2 class="featurette-heading">He’s going to kill it</h2>
                 <p class="lead">
@@ -112,7 +112,7 @@
                 <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Tristan Newell</a>
                 <mat-card-subtitle>Debate League Stand-Up National Champion</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="/assets/images/tristen.jpg" alt="Photo of a Tristan" />
+            <img mat-card-image src="./assets/images/tristen.jpg" alt="Photo of a Tristan" />
             <mat-card-content>
                 <h2 class="featurette-heading">Nate Freakin' Eubanks</h2>
                 <p class="lead">
