--- a/nateeubanksNG/src/app/not-found/not-found.component.html
+++ b/nateeubanksNG/src/app/not-found/not-found.component.html
@@ -38,6 +38,6 @@
       </div>
 
       <a href="/" class="logo logo-img-1x">
-        <img width="32" height="32" title="" alt="" src="/assets/favicon.png">
+        <img width="32" height="32" title="" alt="" src="./assets/favicon.png">
       </a>
     </div>
